# fcc-projects

./: .gitignore  README.md
Backend-Development-and-APIs/: README.md
Backend-Development-and-APIs/boilerplate-project-exercisetracker/: helpers.js  package-lock.json  package.json  server.js
Backend-Development-and-APIs/boilerplate-project-filemetadata/: server.js
Backend-Development-and-APIs/boilerplate-project-headerparser/: README.md  package-lock.json  package.json  server.js
Backend-Development-and-APIs/boilerplate-project-timestamp/: README.md  package.json  server.js
Backend-Development-and-APIs/boilerplate-project-urlshortener/: .env.example  README.md  package-lock.json  package.json  server.js
Challenges/binary-to-int/: main.js  main.py
Challenges/greater-even-and-odd-number/: main.js  main.py
Challenges/one-digit-product/: main.js  main.py
Challenges/sort-digits-desc/: main.js  main.py
Relational-Database/: universe.sql
Relational-Database/Bash-Scripting-Five-Programs/: bingo.sh  countdown.sh  fortune.sh  questionnaire.sh
Relational-Database/Bike-Rental-Shop/: bike-shop.sh
Relational-Database/Kitty-Ipsum-Translator/: kitty_info.txt
Relational-Database/Number-Guessing-Game/: number_guess.sh  number_guess.sql
Relational-Database/Periodic-Table/: element.sh  periodic_table.sql
Relational-Database/Salon-Appointment-Scheduler/: salon.sh  salon.sql
Scientific-Computing-with-Python/Arithmetic-Formatter/: arithmetic_arranger.py  pyproject.toml
Scientific-Computing-with-Python/Time-Calculator/: pyproject.toml  time_calculator.py
(+23 files in other folders)
