[tool.poetry]
name = "fcc-arithmetic-formatter"
version = "0.1.0"
description = ""
authors = ["Francisco Pantoja <franciscopantojag98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
