[tool.poetry]
name = "time-calculator"
version = "0.1.0"
description = ""
authors = ["Francisco Pantoja <franciscopantojag98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
